--- a/react_assignment/src/index.css
+++ b/react_assignment/src/index.css
@@ -1,17 +1,22 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+    font-weight: 500;
+    text-decoration: none;
+    color: white;
 }
 
 
 body {
-  margin: 0;
-
+    margin: 0;
+    padding: 0;
+   box-sizing: border-box;
 }
 
 
+button {
+    text-transform: none !important;
+    font-weight: 500;
+}
